# KalznCodeJudgerCore

./: .travis.yml  CMakeLists.txt  Judger.cpp  Judger.h  Killer.cpp  Killer.h  README.md  README_en.md  Runner.cpp  Runner.h  spj_demo.cpp
include/: boxlib.h  compilerlib.h  jsonlib.h  judger_config.h  judgerlib.h  killerlib.h  loglib.h  securitylib.h
json/: JudgeConfig.json
judger/: boxlib.c  boxlib.h  compilerlib.c  jsonlib.c  judger_config.c  judger_config.h  judgerlib.c  judgerlib.h  killerlib.c  loglib.c  loglib.h  main.c  makefile  matcherlib.c  matcherlib.h  securitylib.c
seccomp/: libseccomp-dev_2.5.1-1ubuntu1~20.04.1_amd64.deb  libseccomp2_2.5.1-1ubuntu1~20.04.1_amd64.deb  make_4.2.1-1.2_amd64.deb  seccomp_2.5.1-1ubuntu1~20.04.1_amd64.deb
sh/: getspj.sh  rebuild.sh  result.json  run.sh
spj_code/: spj_demo.cpp  spjlib.cpp  spjlib.h
src/: boxlib.c  cJSON.c  cJSON_Utils.c  compilerlib.c  jsonlib.c  judger_config.c  judgerlib.c  killerlib.c  loglib.c  main.c  matcherlib.c  securitylib.c
test_driver/: driver0.c
test_sample/: setting.info
test_sample/test_sample_0/: Main  config.json  result.json  std.cpp
test_sample/test_sample_1/: Main.java  config.json
testworkspace/: Main.java  config.json  result.json  result.txt
toolVersion/: 1.out  bbc  boxlib.c  boxlib.h  compilerlib.c  compilerlib.h  judger_config.c  judger_config.h  judgerlib.c  judgerlib.h  killerlib.c  killerlib.h  loglib.c  loglib.h  main.c  makefile  matcherlib.c  matcherlib.h  securitylib.c  securitylib.h  sst
workspace/: Main  config.json  result.json  std.cpp
(+48 files in other folders)
